some more touchups 1. The copyright section was hidden on small screens because the subscribe CTA increased in size when the close button appeared. I've fixed the close button by using the visibility:hidden (hidden object occupies space on the layout) property rather than display:none (hidden object doesn't occupy space on layout) 2. The subscribe CTA text was long so the button got pushed to the next line on small screens, so I shortened the text 3. Also added more right padding to the close button as it was not very accessible on phones with a cover

--- a/public/css/agni.css
+++ b/public/css/agni.css
@@ -102,11 +102,12 @@ input[type=email] {
 }
 
 #pinnedinstallclosebutton, #pinnedsubscribeclosebutton {
-    display:none;
+    visibility: hidden;
 }
 
 .closebutton {
     font-size:1.5em;
+    padding-right: 5px;
 }
 
 #icon-middle {
